--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -82,8 +82,8 @@ input {
   z-index: -9999 !important;
 }
 ::-webkit-scrollbar {
-  height: 0;
-  width: 0;
+  // height: 0;
+  // width: 0;
 }
 .flex-row {
   display: -webkit-flex;
@@ -107,4 +107,7 @@ input {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+.el-form-item--small.el-form-item {
+  margin-bottom: 0 !important;
 }
